@@ -1,9 +1,9 @@
 package ar.com.nanotaboada.java.samples.spring.boot.services;
 
 import jakarta.validation.Validator;
+import lombok.RequiredArgsConstructor;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.modelmapper.ModelMapper;
@@ -17,76 +17,89 @@ import ar.com.nanotaboada.java.samples.spring.boot.models.BookDTO;
 import ar.com.nanotaboada.java.samples.spring.boot.repositories.BooksRepository;
 
 @Service
+@RequiredArgsConstructor
 public class BooksService {
 
-    private final BooksRepository repository;
+    private final BooksRepository booksRepository;
     private final Validator validator;
-    private final ModelMapper mapper;
+    private final ModelMapper modelMapper;
 
-    public BooksService(BooksRepository repository, Validator validator, ModelMapper mapper) {
-        this.repository =  repository;
-        this.validator = validator;
-        this.mapper = mapper;
-    }
-
-    /* --------------------------------------------------------------------------------------------
+    /*
+     * -------------------------------------------------------------------------
      * Create
-     * ----------------------------------------------------------------------------------------- */
+     * -------------------------------------------------------------------------
+     */
 
     @CachePut(value = "books", key = "#bookDTO.isbn")
     public boolean create(BookDTO bookDTO) {
-        if (validator.validate(bookDTO).isEmpty()
-            && !repository.existsById(bookDTO.getIsbn())) {
-            Book book = mapper.map(bookDTO, Book.class);
-            repository.save(book);
+        boolean notExists = !booksRepository.existsById(bookDTO.getIsbn());
+        boolean valid = validator.validate(bookDTO).isEmpty();
+        if (notExists && valid) {
+            Book book = mapFrom(bookDTO);
+            booksRepository.save(book);
             return true;
         }
         return false;
     }
 
-    /* --------------------------------------------------------------------------------------------
+    /*
+     * -------------------------------------------------------------------------
      * Retrieve
-     * ----------------------------------------------------------------------------------------- */
+     * -------------------------------------------------------------------------
+     */
 
     @Cacheable(value = "books", key = "#isbn")
     public BookDTO retrieveByIsbn(String isbn) {
-        return repository.findByIsbn(isbn)
-            .map(book -> mapper.map(book, BookDTO.class))
-            .orElse(null);
+        return booksRepository.findByIsbn(isbn)
+                .map(this::mapFrom)
+                .orElse(null);
     }
 
     @Cacheable(value = "books")
     public List<BookDTO> retrieveAll() {
-        return StreamSupport.stream(repository.findAll().spliterator(), false)
-            .map(book -> mapper.map(book, BookDTO.class))
-            .collect(Collectors.toList());
+        return StreamSupport.stream(booksRepository.findAll().spliterator(), false)
+                .map(this::mapFrom)
+                .toList();
     }
 
-    /* --------------------------------------------------------------------------------------------
+    /*
+     * -------------------------------------------------------------------------
      * Update
-     * ----------------------------------------------------------------------------------------- */
+     * -------------------------------------------------------------------------
+     */
 
     @CachePut(value = "books", key = "#bookDTO.isbn")
     public boolean update(BookDTO bookDTO) {
-        if (validator.validate(bookDTO).isEmpty()
-            && repository.existsById(bookDTO.getIsbn())) {
-            Book book = mapper.map(bookDTO, Book.class);
-            repository.save(book);
+        boolean exists = booksRepository.existsById(bookDTO.getIsbn());
+        boolean valid = validator.validate(bookDTO).isEmpty();
+        if (exists && valid) {
+            Book book = mapFrom(bookDTO);
+            booksRepository.save(book);
             return true;
         }
         return false;
     }
 
-    /* --------------------------------------------------------------------------------------------
+    /*
+     * -------------------------------------------------------------------------
      * Delete
-     * ----------------------------------------------------------------------------------------- */
+     * -------------------------------------------------------------------------
+     */
 
     @CacheEvict(value = "books", key = "#isbn")
     public boolean delete(String isbn) {
-        if (repository.existsById(isbn)) {
-            repository.deleteById(isbn);
+        if (booksRepository.existsById(isbn)) {
+            booksRepository.deleteById(isbn);
             return true;
         }
         return false;
+    }
+
+    private BookDTO mapFrom(Book book) {
+        return modelMapper.map(book, BookDTO.class);
+    }
+
+    private Book mapFrom(BookDTO dto) {
+        return modelMapper.map(dto, Book.class);
     }
 }
